# sc19_p

./: .gitignore
bbm/: CMakeLists.txt  bbm.cpp  bbm.hpp  example.cpp
bbm/bme280/: BME280_BBM.cpp  BME280_BBM.hpp  CMakeLists.txt  bme280.c  bme280.cpp  bme280.hpp  pico-bme280.c  user.c  user.h
bbm/bno055/: BNO055.cpp  BNO055_BBM.cpp  BNO055_BBM.hpp  CMakeLists.txt
bbm/drv8835/: drv8835.cpp
bbm/hcsr04/: CMakeLists.txt  hcsr04.cpp  hcsr04.hpp  hcsr04_original.cpp
bbm/njl5513r/: CMakeLists.txt  njl5513r.cpp  njl5513r.hpp
bbm/sc/: CMakeLists.txt  binary.cpp  binary.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  measurement.hpp  omit.hpp  pin.cpp  pinio.cpp  pinio.hpp  sc.cpp  sc.hpp  sc_basic.cpp  sc_basic.hpp  spi.cpp  spi.hpp  uart.cpp  uart.hpp  unit.cpp  unit.hpp
bbm/sc/include/: adc.hpp  binary.hpp  flush.hpp  gpio.hpp  i2c.hpp  measurement copy.hpp  measurement.hpp  motor.hpp  omit.hpp  pin.hpp  pwm.hpp  sc.hpp  sc_basic.hpp  spi.hpp  uart.hpp  unit.hpp
bbm/sc/src/: adc.cpp  binary.cpp  flush.cpp  gpio.cpp  i2c.cpp  measurement.cpp  motor.cpp  pin.cpp  pwm.cpp  sc_basic.cpp  spi.cpp  uart.cpp  unit.cpp
bbm/sd/: CMakeLists.txt  sd.cpp  sd.hpp  simple_example.cpp
bbm/speaker/: CMakeLists.txt  speaker.cpp  speaker.hpp
bbm/spresense/: spresense.cpp
bme_ugoku/: CMakeLists.txt  bbm.cpp
bme_ugoku/bme280/: README.md  bme280.cpp
bme_ugoku/drv8835/: CMakeLists.txt  drv8835.cpp
bme_ugoku/njl5513r/: njl5513r.hpp
bme_ugoku/sc/include/: measurement.hpp  motor.hpp
bme_ugoku/sc/src/: adc.cpp  spi.cpp
bme_ugoku/sd/: sd.cpp
bme_ugoku/speaker/: speaker.cpp
bme_ugoku/twelite/: twelite.cpp
bno_calib/: CMakeLists.txt  bno_calib.cpp  bno_calib.hpp
bno_calib/bno055/: BNO055_BBM.cpp  BNO055_BBM.hpp
bno_calib/hcsr04/: hcsr04.hpp
bno_calib/njl5513r/: CMakeLists.txt  README.md
bno_calib/sc/: CMakeLists.txt
bno_calib/sc/include/: flush.hpp  pin.hpp
bno_calib/sc/src/: gpio.cpp  pin.cpp  uart.cpp
bno_calib/speaker/: CMakeLists.txt  README.md
bno_calib/spresense/: spresense.cpp  spresense.hpp
bno_calib/twelite/: twelite.hpp
fm/: CMakeLists.txt  fm.cpp  fm.hpp  fm_fall.cpp  fm_long.cpp  fm_short.cpp  fm_wait.cpp
fm/bme280/: bme280.cpp  bme280.hpp  example.cpp
fm/bno055/: BNO055.cpp  BNO055_BBM.cpp
fm/drv8835/: README.md
fm/hcsr04/: hcsr04.cpp
fm/njl5513r/: njl5513r.hpp
fm/sc/include/: binary.hpp  gpio.hpp  omit.hpp  pwm.hpp  spi.hpp  unit.hpp
fm/sc/src/: adc.cpp  i2c.cpp  pin.cpp  spi.cpp
fm/sd/: sd.cpp
fm/speaker/: speaker.cpp  speaker.hpp
fm/spresense/: spresense.hpp
fm/twelite/: twelite.hpp
old_files/: save_log.cpp  sc copy 2.hpp  sc copy 3.cpp  sc copy 3.hpp  sc copy.hpp  sc.cpp  sc.hpp  sc_pico copy.cpp  sc_pico.cpp  sc_pico.hpp  sc_test.cpp
shinkan/susumu/: CMakeLists.txt  shinkan.cpp  shinkan.hpp
shinkan/susumu/bme280/: bme280.hpp
shinkan/susumu/hcsr04/: hcsr04.cpp
shinkan/susumu/sc/include/: gpio.hpp  motor.hpp  omit.hpp  sc_basic.hpp
shinkan/susumu/sc/src/: flush.cpp  measurement.cpp
shinkan/susumu/sd/: README.md
shinkan/susumu/sd/simple_example/: simple_example.cpp
shinkan/susumu/speaker/: speaker.cpp
shinkan/susumu/spresense/: CMakeLists.txt  spresense.cpp
shinkan/susumu/twelite/: CMakeLists.txt
test_code/exam001/: CMakeLists.txt  README.md  exam001.cpp  exam001.hpp  exam001_test.cpp
test_code/exam001/sc_pico/: CMakeLists.txt  sc.hpp  sc_pico.cpp  sc_pico.hpp
test_code/i2c_test/: CMakeLists.txt  i2c_test.cpp  sc_pico.cpp
test_code/led_test/: CMakeLists.txt  led.cpp
test_code/led_test/sc_pico/: CMakeLists.txt  sc.cpp  sc_pico.cpp
test_code/sc/: CMakeLists.txt  sc.cpp  sc.hpp
test_code/sc_pico/: CMakeLists.txt  sc_pico.cpp  sc_pico.hpp
test_code/sc_pico/old_files/: sc copy 2.cpp  sc copy 2.hpp  sc_test.cpp
test_code/uart_test/: CMakeLists.txt  sc.hpp  sc_pico.cpp  sc_pico.hpp  sc_test.cpp  uart_test.cpp
test_code/uart_test/sc_pico/: CMakeLists.txt  sc.hpp  sc_pico.cpp  sc_test.cpp
test_code/uart_test/sc_pico/old_files/: sc copy 2.cpp  sc copy.cpp  sc copy.hpp  sc.cpp  sc_pico copy.hpp  sc_pico.cpp  sc_pico.hpp
